# songbirdcore

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: pages.yaml  pypi-publish.yaml  style.yaml  tests.yaml  version-check.yaml
docs/: index.md
docs/songbirdcore/: common.md  gdrive.md  itunes.md  web.md  youtube.md
docs/songbirdcore/models/: itunes_api.md  modes.md
songbirdcore/: common.py  gdrive.py  itunes.py  requirements.txt  requirements.txt.blank  web.py  youtube.py
songbirdcore/models/: itunes_api.py  modes.py
tests/unit/: test_common.py  test_itunes.py  test_web.py  test_youtube.py
v0.0.6/: 404.html  index.html  objects.inv  sitemap.xml
v0.0.6/songbirdcore/common/: index.html
v0.0.6/songbirdcore/gdrive/: index.html
v0.0.6/songbirdcore/itunes/: index.html
v0.0.7/: 404.html  index.html  sitemap.xml
v0.0.8/: 404.html  index.html  sitemap.xml
v0.0.9/: 404.html  index.html  sitemap.xml
v0.0.9/search/: search_index.json
v0.1.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.1.1/search/: search_index.json
v0.1.10/: 404.html  index.html  sitemap.xml
v0.1.11/: 404.html  index.html  sitemap.xml
v0.1.12/: 404.html  index.html  sitemap.xml
v0.1.12/search/: search_index.json
v0.1.2/: 404.html  index.html  sitemap.xml
v0.1.2/search/: search_index.json
v0.1.3/: 404.html  index.html  sitemap.xml
v0.1.4/: 404.html  index.html  sitemap.xml
v0.1.4/search/: search_index.json
v0.1.5/: 404.html  index.html  sitemap.xml
v0.1.6/: 404.html  index.html  sitemap.xml
v0.1.6/search/: search_index.json
v0.1.7/: 404.html  index.html  sitemap.xml
v0.1.8/: 404.html  index.html  sitemap.xml
v0.1.9/: 404.html  index.html  objects.inv  sitemap.xml
(+110 files in other folders)
