[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "songbirdcore"
authors = [
    {name = "Christian Boin"},
]
version = "0.0.2"
description = "core low level api for songbird"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["songbirdcore/requirements.txt"]}
